# internal/handler/handler.go
@@ -1,10 +1,12 @@
 package handler
 
 import (
+	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 	_ "kursachDB/docs"
+	"time"
 )
 
 type Handler struct {
@@ -20,13 +22,25 @@ func NewHandler(services *Service) *Handler {
 func (h *Handler) InitRoutes() *gin.Engine {
 	router := gin.New()
 
+	router.Use(cors.New(cors.Config{
+		AllowOrigins:  []string{"*"},
+		AllowMethods:  []string{"GET", "POST", "PUT", "PATCH", "DELETE"},
+		AllowHeaders:  []string{"Origin", "Content-Type", "Content-Length"},
+		ExposeHeaders: []string{"Content-Length"},
+		MaxAge:        12 * time.Hour,
+	}))
+
+	// Swagger документация
 	router.GET("swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 
+	// Маршруты для аутентификации
 	auth := router.Group("/auth")
 	{
 		auth.POST("/login", h.Login)
+		auth.POST("/loginAdmin", h.LoginAdmin)
 	}
 
+	// Прочие маршруты API
 	api := router.Group("/api")
 
 	transport := api.Group("/bus")
@@ -39,7 +53,7 @@ func (h *Handler) InitRoutes() *gin.Engine {
 	schedule := api.Group("/flight")
 	{
 		schedule.POST("/add", h.AddFlight)
-		schedule.GET("/", h.GetAllFlight)
+		schedule.GET("", h.GetAllFlight) // ваш маршрут для рейсов
 	}
 
 	place := api.Group("/place")
@@ -56,9 +70,10 @@ func (h *Handler) InitRoutes() *gin.Engine {
 		ticket.GET("/user", h.GetUserTickets)
 	}
 
-	user := api.Group("/user")
+	user := api.Group("/users")
 	{
 		user.GET("/", h.GetAllUsers)
 	}
+
 	return router
 }
